working on mobile issue

--- a/style.css
+++ b/style.css
@@ -105,14 +105,24 @@ img {
   color: white;
 }
 
-@media (max-width: 380px) {
+@media (max-width: 375px) {
   h1 {
     font-size: 40px;
+  }
+  h2 {
+    display: none;
   }
   h3 {
     display: none;
   }
-  h2 {
-    display: none;
+}
+
+@media (max-height: 375px) {
+  h1 {
+    font-size: 30px;
+  }
+  img {
+    width: 100px;
+    height: 120px;
   }
 }
